src/objects/Objective__c.object
<CustomObject>
    <description>NOTES Objectives represent the milestones needed to complete a Short-term Goal on a Plan. Objectives relate to Plans by way of Short-term Goals. Objectives are Master-detail to Short-term Goals.</description>
    <fields>
        <fullName>Achieved_DateTime__c</fullName>
        <label>Achieved DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Frequency_and_Duration__c</fullName>
        <label>Frequency and Duration</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Objective_Description__c</fullName>
        <label>Objective Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Objective_Name__c</fullName>
        <label>Objective Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Plan</label>
        <referenceTo>Plan__c</referenceTo>
        <relationshipLabel>PlanObjectives</relationshipLabel>
        <relationshipName>PlanObjectives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Read_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Read Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Short_term_Goal__c</fullName>
        <label>Short-term Goal</label>
        <referenceTo>Short_Term_Goal__c</referenceTo>
        <relationshipLabel>Objectives</relationshipLabel>
        <relationshipName>Objectives</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Achieved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Revised</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Services Ended Prior to Completion</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Objective</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Plan__c</columns>
        <columns>Short_term_Goal__c</columns>
        <columns>Objective_Description__c</columns>
        <columns>Objective_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>O-{00000000}</displayFormat>
        <label>Objective Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Objectives</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>